# McKaySystem

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  cli.py  db.py  db_migrate.py  debug_ingest.py  export_findings.py  ingest_exported_json.py  ingest_parquet.py  pyproject.toml  pytest.ini  runner.py  version.py
apps/: __init__.py
checks/: __init__.py  registry.py
contracts/: __init__.py  finops_checker_pattern.py  finops_contracts.py  interfaces.py  normalization.py  schema.py  services.py  storage_cast.py  typed_dicts.py
deploy/: README.md
docs/: README.md  correlation_engine.md  cur.md  decisions.md  docs_contract.md  docs_glossary.md  mermaid.md  troubleshooting.md
infra/: aws_config.py  config.py  logging_config.py  pipeline_paths.py
mckaysystem/: cli.py
migrations/: 001_init.sql  002_finding_state_workspace.py  003_finding_aggregates_current.sql  004_finding_state_audit.sql  005_run_state_machine.sql  006_run_state_recovery_indexes.sql  007_governance_sla_policies.sql  008_governance_teams.sql  009_finding_governance.sql  010_governance_audit_log.sql  011_finding_current_governance.sql  012_default_sla_policies.sql  013_governance_layer_hardening.sql  014_governance_sla_pause_resume.sql  015_governance_sla_extension_support.sql  016_runs_pricing_metadata.sql  017_cost_service_monthly.sql  018_index_usage_analysis.sql  019_remediation_actions.sql  020_remediation_impact.sql  021_rbac_authentication.sql  022_rbac_permission_consistency_and_api_key_index.sql  023_rbac_scope_bootstrap.sql
pipeline/: __init__.py  export_json.py  query_duckdb.py  run_manifest.py  writer_parquet.py
plans/: aws_connection_wizard.md  flask_api_refactoring_plan.md
services/: __init__.py  pricing_service.py  rbac_service.py
tests/: _determinism.py  aws_mocks.py  factories.py  test_aws_common_pagination.py  test_aws_common_pricing.py  test_aws_mocks.py  test_backup_plans_audit.py  test_backup_vaults_audit.py  test_cloudfront_distributions.py  test_cloudwatch_metrics_logs_cost.py  test_config.py  test_cost_explorer_analyzer.py  test_db_conn_pool.py  test_db_metrics.py  test_db_migrate.py  test_db_rbac.py  test_determinism_correlation_output.py  test_determinism_findings_output.py  test_ebs_storage.py  test_ec2_instances.py  test_ingest_parquet.py  (+28 more)
(+197 files in other folders)
